# LegisNote

./: .gitignore  DOCS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  requirements.md  tsconfig.base.json
apps/web/: .env.example  Dockerfile  next.config.mjs  package.json  tsconfig.json
apps/web/prisma/: schema.prisma
apps/web/scripts/: create-user.mjs
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AuthStatus.tsx  SiteHeader.tsx
apps/web/src/lib/: palette.ts
apps/web/src/reader/: Reader.tsx  ReaderUnit.tsx  UnitOverlay.tsx  UnitText.tsx  overlay.module.css  reader.module.css  types.ts  (+1 more)
docs/: architecture.md  data-model.md  deployment.md  research-czech-legislation-data.md
infra/: .env.example  Caddyfile  deploy.sh  docker-compose.local.yml  docker-compose.yml  local-up.sh  local.env
infra/db/: schema.sql
infra/db/migrations/: 001_publish_gate.sql
services/export/: README.md
source/manifest/: 91-2012.json
source/md/: 91-2012.md
tools/ingestion/: README.md  pyproject.toml
tools/ingestion/legisnote_ingest/: __init__.py  cli.py  config.py  ir.py  mirror.py  pipeline.py
tools/ingestion/legisnote_ingest/adapters/: __init__.py  base.py  lawgpt.py  pdf.py
tools/ingestion/legisnote_ingest/cache/: __init__.py  store.py
tools/ingestion/legisnote_ingest/emit/: __init__.py  manifest.py  markdown.py
tools/ingestion/legisnote_ingest/importer/: __init__.py  client.py
tools/ingestion/legisnote_ingest/parse/: __init__.py  czech_statute.py
tools/ingestion/tests/: test_emit.py  test_mirror.py  test_parse.py
(+36 files in other folders)
